# simple-pvp

./: .gitignore  README.md  components.json  electron-builder.yml  index.html  nodemon.json  overlay.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: electron-builder.yml  release.yml
assets/: README.md  app-logo.icns  icon.icns
docs/: CNAME  index.html
docs/plans/: 2026-02-08-tauri-modernization.md
electron/: global.d.ts  main.ts  package-lock.json  package.json
electron/ElectronStore/: Configuration.ts
electron/cronjobs/: check3x.ts  index.ts
electron/database/: index.ts
electron/ext/: Logger.ts
electron/hotkeys/: Space.ts  f.ts  h.ts  index.ts  r.ts  remap.ts
electron/listeners/: enterCombat.ts  fetchUserdata.ts  fetchUsersettings.ts  fetchWarEntries.ts  index.ts  setSpacebarKeybind.ts  updateSettings.ts  updateUserdata.ts
electron/setup/: AutoUpdate.ts  installDevTools.ts  preload.ts
electron/types/: CronJob.ts  DBParams.ts  DatabaseMigration.ts  Keybind.ts  Remap.ts  (+1 more)
frontend/: index.html  package.json  vite.config.ts
src/: App.vue  main.ts  overlay.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  scheduler.rs
src-tauri/src/api/: client.rs  guild.rs  mod.rs  player.rs
src-tauri/src/commands/: api_client.rs  blocklist.rs  combat.rs  keybinds.rs  mod.rs  settings.rs  user.rs  version.rs  wars.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
(+92 files in other folders)
