[package]
name = "simple-companion-pvp"
version = "1.2.3"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
once_cell = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "simple_companion_pvp_lib"
crate-type = ["lib", "cdylib", "staticlib"]
